--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@ body {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 header {
   display: flex;
   flex-direction: row;
@@ -23,6 +28,13 @@ h1 {
   margin-left: 100px;
 }
 
+.photographer_card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .photographer_card img {
   display: block;
   object-fit: cover;
@@ -36,6 +48,7 @@ h1 {
   display: inline-block;
   overflow: hidden;
   border-radius: 50%;
+  filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.25));
 }
 
 .photographer_section {
@@ -61,4 +74,43 @@ h1 {
 .photographer_section article img {
   height: 200px;
   width: 200px;
+}
+
+.photographer_text__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.photographer_text__container h2,
+h3,
+p {
+  margin: 0;
+  line-height: 23px;
+}
+
+.photographer_text__container h2 {
+  margin-top: 20px;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.photographer_text__container h3 {
+  color: #901c1c;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.photographer_text__container p {
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.photographer_text__container p:last-child {
+  color: #757575;
 }
