--- a/css/photographer.css
+++ b/css/photographer.css
@@ -3,9 +3,65 @@
 }
 
 .photograph-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background-color: #fafafa;
   height: 300px;
   margin: 0 100px;
+}
+
+.photographer-header__description {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  margin-left: 50px;
+}
+
+.name {
+  color: #d3573c;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin: 0;
+}
+
+.city {
+  color: #901c1c;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 20px;
+}
+
+.tagline {
+  color: #525252;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.photographer-header__img {
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  overflow: hidden;
+  border-radius: 50%;
+  filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.25));
+  margin-right: 50px;
+}
+
+.photographer-header__img img {
+  width: 250px;
+  height: 200px;
+  display: block;
+  object-fit: cover;
+  margin-left: -20px;
+  transform: scale(1.3);
 }
 
 .contact_button {
