--- a/css/photographer.css
+++ b/css/photographer.css
@@ -77,6 +77,78 @@
   cursor: pointer;
 }
 
+.gallery {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin-left: 100px;
+  margin-right: 60px;
+  margin-top: 50px;
+  gap: 70px;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  width: 90%;
+  height: 350px;
+}
+
+.card img {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 85%;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.card h3 {
+  position: absolute;
+  left: 5px;
+  bottom: 10px;
+  color: #901c1c;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.card p {
+  position: absolute;
+  right: 5px;
+  bottom: 10px;
+  color: #901c1c;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.like-price {
+  display: flex;
+  position: fixed;
+  background-color: #db8876;
+  padding: 20px;
+  right: 50px;
+  bottom: 0px;
+  border-radius: 5px 5px 0 0;
+}
+
+.like-price p {
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.like-price p:first-child {
+  margin-right: 80px;
+}
+
 .modal {
   border-radius: 5px;
   background-color: #db8876;
@@ -102,6 +174,31 @@
   font-size: 64px;
   font-weight: normal;
   text-align: center;
+}
+
+.photo-sort {
+  display: flex;
+  margin-left: 100px;
+  margin-top: 20px;
+  align-items: center;
+}
+
+.photo-sort__title {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.custom-select select {
+  background: #901c1c;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  margin-left: 20px;
 }
 
 form {
