--- a/css/photographer.css
+++ b/css/photographer.css
@@ -149,16 +149,29 @@
   margin-right: 80px;
 }
 
+#contact_modal {
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  overflow-y: auto;
+}
+
 .modal {
+  position: relative;
+  margin: 1.75rem auto;
   border-radius: 5px;
   background-color: #db8876;
-  width: 50%;
+  width: 40%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
   justify-content: space-between;
   padding: 35px;
-  margin: auto;
 }
 
 .modal header {
@@ -174,6 +187,38 @@
   font-size: 64px;
   font-weight: normal;
   text-align: center;
+}
+
+.modal_picture {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 150px;
 }
 
 .photo-sort {
