--- a/css/photographer.css
+++ b/css/photographer.css
@@ -106,6 +106,15 @@
   border-radius: 5px;
 }
 
+.card video {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 85%;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
 .card h3 {
   position: absolute;
   left: 5px;
@@ -115,6 +124,10 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 75%;
 }
 
 .card p {
