--- a/css/photographer.css
+++ b/css/photographer.css
@@ -2,7 +2,7 @@
   display: none;
 }
 
-.photograph-header {
+.photographer-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -46,13 +46,13 @@
 }
 
 .photographer-header__img {
-  width: 200px;
-  height: 200px;
+  width: 220px;
+  height: 220px;
   display: inline-block;
   overflow: hidden;
   border-radius: 50%;
   filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.25));
-  margin-right: 50px;
+  margin-right: 40px;
 }
 
 .photographer-header__img img {
@@ -61,7 +61,7 @@
   display: block;
   object-fit: cover;
   margin-left: -20px;
-  transform: scale(1.3);
+  transform: scale(1.2);
 }
 
 .contact_button {
