--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,15 @@ main {
   margin-bottom: 100px;
 }
 
+textarea {
+  width: 100%;
+  height: 150px;
+  margin-bottom: 20px;
+  border: none;
+  border-radius: 5px;
+  resize: none;
+}
+
 .logo {
   height: 50px;
   margin-left: 100px;
