--- a/css/photographer.css
+++ b/css/photographer.css
@@ -77,7 +77,7 @@
   cursor: pointer;
 }
 
-.gallery {
+.photographer-gallery {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   margin-left: 100px;
@@ -109,6 +109,7 @@
 .card video {
   position: absolute;
   top: 0;
+  right: 0;
   width: 100%;
   height: 85%;
   object-fit: cover;
