--- a/css/photographer.css
+++ b/css/photographer.css
@@ -115,6 +115,7 @@
   height: 85%;
   object-fit: cover;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 .card h2 {
@@ -312,12 +313,26 @@
   margin-top: 10px;
 }
 
+.filters-container {
+  background-color: #901c1c;
+  color: #ffffff;
+  font-size: 16px;
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.filters-container i {
+  padding: 5px;
+}
+
 .filters-dropdown {
-  display: flex;
+  display: none;
   flex-direction: column;
 }
 
-.filters-container div {
+.filters-dropdown div {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -337,20 +352,6 @@
   width: 100%;
 }
 
-.filters-container {
-  background-color: #901c1c;
-  color: #ffffff;
-  font-size: 16px;
-  padding: 5px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.filters-container i {
-  padding: 5px;
-}
-
 .filters-button {
   background-color: #901c1c;
   color: #ffffff;
@@ -359,37 +360,6 @@
   border: none;
   cursor: pointer;
   min-width: 100px;
-}
-
-.dropdown {
-  font-family: "DM Sans";
-  display: flex;
-}
-.dropdown p {
-  font-size: 1em;
-  padding-right: 10px;
-}
-.dropdown button {
-  background-color: #901c1c;
-  color: #ffffff;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-.dropdown-options {
-  background-color: #f1f1f1;
-  overflow: auto;
-  display: none;
-}
-.dropdown-options a {
-  background-color: #901c1c;
-  color: #ffffff;
-  padding: 1em 0.5em;
-  text-decoration: none;
-  display: block;
-  border-bottom: solid 0.1em;
 }
 
 form {
