--- a/css/photographer.css
+++ b/css/photographer.css
@@ -236,21 +236,11 @@
   object-fit: cover;
 }
 
-.media_modal_button button {
-  color: #fff;
-  background-color: #fff;
-  font-size: 24px;
-  font-weight: 500;
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  margin: 20px;
-}
-
 .media_modal_content {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  height: 80%;
 }
 
 #media_modal_img,
@@ -259,6 +249,7 @@
   height: 100%;
   object-fit: cover;
   border-radius: 5px;
+  margin-top: 20px;
 }
 
 #media_modal_title {
@@ -270,6 +261,8 @@
 
 .media_close {
   position: absolute;
+  width: 10%;
+  display: block;
   top: 10px;
   right: 50px;
   background-color: #fff;
@@ -279,7 +272,30 @@
 }
 
 #right_arrow img {
+  color: #fff;
+  background-color: #fff;
+  font-size: 24px;
+  font-weight: 500;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 20px;
   rotate: 180deg;
+  margin-top: 300px;
+}
+
+#left_arrow img {
+  color: #fff;
+  background-color: #fff;
+  font-size: 24px;
+  font-weight: 500;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 20px;
+  margin-top: 300px;
 }
 
 .modal-content {
