--- a/css/photographer.css
+++ b/css/photographer.css
@@ -158,6 +158,7 @@
 
 .likes-price h2 {
   font-size: 24px;
+  margin: 0;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
@@ -272,7 +273,6 @@
 }
 
 #right_arrow img {
-  color: #fff;
   background-color: #fff;
   font-size: 24px;
   font-weight: 500;
@@ -281,12 +281,11 @@
   border-radius: 5px;
   cursor: pointer;
   margin: 20px;
-  rotate: 180deg;
+  transform: rotate(180deg);
   margin-top: 300px;
 }
 
 #left_arrow img {
-  color: #fff;
   background-color: #fff;
   font-size: 24px;
   font-weight: 500;
