Changement de la soutenance, reste a faire les focus : A voir avec mon mentor

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -238,10 +238,11 @@
 }
 
 .media_modal_content {
+  position: relative;
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 80%;
+  height: 700px;
 }
 
 #media_modal_img,
