--- a/css/photographer.css
+++ b/css/photographer.css
@@ -273,7 +273,7 @@
   cursor: pointer;
 }
 
-#right_arrow img {
+#right_arrow {
   background-color: #fff;
   font-size: 24px;
   font-weight: 500;
@@ -286,7 +286,7 @@
   margin-top: 300px;
 }
 
-#left_arrow img {
+#left_arrow {
   background-color: #fff;
   font-size: 24px;
   font-weight: 500;
